Header alignment fixes

--- a/assignments/week7/styles/main-7.css
+++ b/assignments/week7/styles/main-7.css
@@ -21,19 +21,16 @@ header h1 {
     font-size: 3em;
 }
 
-header > h1, header > h2{
-    text-align: left;
-    margin-left: 225px;
+
+
+header > h1, header > h2, header > .subheading{
+    text-align: center;
+    margin: 5px;
 }
 header img {
-    position: absolute;
     float: left;
+    padding: 5px;
 }
-
-.subheading {
-    text-align: center;
-}
-
 nav {
     background-color: cadetblue;
     text-align: center;
@@ -47,7 +44,8 @@ nav ul {
     overflow: hidden;
 }
 nav ul li {
-    display: inline;
+    display: flex;
+    flex-direction: row;
     padding: 2px;
 }
 nav ul li a {
@@ -69,14 +67,14 @@ main > img {
     color: aliceblue;
     text-align: center;
     padding: 1px;
-    position: relative;
 }
 .weather-summary > picture > img{
-    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
     padding: 1em;
     width: 30%;
-    left: 55px;
-    top: 2em;
+    /*left: 55px;*/
+    /*top: 2em;*/
     
 }
 .forecast {
